--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,8 @@ anyio==4.11.0
 attrs==25.4.0
 babel==2.17.0
 beautifulsoup4==4.14.2
+boto3==1.41.2
+botocore==1.41.2
 cachetools==6.2.1
 certifi==2025.10.5
 chardet==5.2.0
@@ -26,14 +28,17 @@ frozenlist==1.8.0
 fsspec==2025.10.0
 google-auth==2.43.0
 google-genai==1.49.0
+grpcio==1.76.0
 h11==0.16.0
 htmldate==1.9.4
 httpcore==1.0.9
 httpx==0.28.1
 httpx-aiohttp==0.1.9
+huggingface-hub==0.36.0
 idna==3.11
 Jinja2==3.1.6
 jiter==0.12.0
+jmespath==1.0.1
 joblib==1.5.2
 jusText==3.0.2
 lxml==6.0.2
@@ -43,26 +48,34 @@ mpmath==1.3.0
 multidict==6.7.0
 networkx==3.5
 numpy==2.3.4
-openai==2.7.1
+openai==2.8.1
+orjson==3.11.4
 packaging==25.0
 pandas==2.3.3
 pillow==12.0.0
 propcache==0.4.1
+protobuf==6.33.1
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pydantic==2.12.4
 pydantic_core==2.41.5
+pymilvus==2.6.3
 PyMuPDF==1.26.6
 PyMySQL==1.1.2
 python-dateutil==2.9.0.post0
 python-docx==1.2.0
+python-dotenv==1.2.1
 python-multipart==0.0.20
 pytz==2025.2
+PyYAML==6.0.3
 regex==2025.11.3
 requests==2.32.5
 rsa==4.9.1
+s3transfer==0.15.0
+safetensors==0.7.0
 scikit-learn==1.7.2
 scipy==1.16.3
+sentence-transformers==5.1.2
 setuptools==80.9.0
 six==1.17.0
 sniffio==1.3.1
@@ -73,11 +86,13 @@ tenacity==9.1.2
 threadpoolctl==3.6.0
 tiktoken==0.12.0
 tld==0.13.1
+tokenizers==0.22.1
 torch==2.9.1
 torchaudio==2.9.1
 torchvision==0.24.1
 tqdm==4.67.1
 trafilatura==2.0.0
+transformers==4.57.1
 typing-inspection==0.4.2
 typing_extensions==4.15.0
 tzdata==2025.2
